@@ -49,8 +49,9 @@ common: &default_settings
   log_level: info
 
   # If you wish to override the location of the log file, you can
-  # uncomment this and enter a path here:
-  # log_path: /var/log/newrelic/
+  # uncomment this
+  # log_file_path: /var/log
+  # log_file_name: newrelic_agent.log
   
   # The newrelic agent communicates with the RPM service via http by
   # default.  If you want to communicate via https to increase
